<resources>
    <string name="app_name">WiFi Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="level_hi">Hi</string>
    <string name="level_middle">Middle</string>
    <string name="level_low">Low</string>
    <string name="network_name_ssid_info">Network name(SSID):</string>
    <string name="mac_info">MAC:</string>
    <string name="link_speed_info">Link speed:</string>
    <string name="frequency_info">Frequency:</string>
    <string name="strength_rssi_info">Strength(RSSI):</string>
    <string name="ip_info">IP:</string>
    <string name="get_network_info">Get network info</string>
    <string name="current_network_info">Current Network Info:</string>
    <string name="network_name">Network name</string>
    <string name="security">Security</string>
    <string name="signal_strength">Signal strength</string>
    <string name="check_wifi_connection">Check WiFi connection</string>
    <string name="get_info">Get Info</string>
    <string name="scan_nets">Scan nets</string>
</resources>
